fix: disable powered-by

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "short-this",
   "version": "1.0.0",
   "description": "An API to short URLs",
-  "repository": {"url": "git@github.com:samuk-a/short-this.git"},
+  "repository": {
+    "url": "git@github.com:samuk-a/short-this.git",
+    "type": "git"
+  },
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
